Did the main page animation and scroll

--- a/Proyecto-final/src/Components/Footer.astro
+++ b/Proyecto-final/src/Components/Footer.astro
@@ -2,7 +2,7 @@
 import "../styles/footer.scss"
 ---
 
-<footer class='d-flex black-bg flex-column align-items-center p-5 isabelline-font'>
+<footer class='d-flex black-bg flex-column align-items-center p-5 isabelline-font  mt-5'>
 
   <p class="fs-5">Know more about me:</p>
 
