--- a/Proyecto-final/src/styles/colors.scss
+++ b/Proyecto-final/src/styles/colors.scss
@@ -4,6 +4,8 @@
 
 $cyan-pacific: #38AECC;
 $blue-ncs: #2D8EAC;
+$purple-grape: #7C1CB0;
+$violet-dark: #9521D4;
 
 ///
 /// Browns
@@ -11,6 +13,7 @@ $blue-ncs: #2D8EAC;
 
 $brown-isabelline: #F8F5F2;
 $brown-bone: #EAE1D6;
+$brown-khaki: #C9B5A6;
 $brown-raw-umber: #8e6e53;
 $brown-coffee: #674F3C;
 $brown-umber: #594636;
