--- a/Proyecto-final/src/styles/footer.scss
+++ b/Proyecto-final/src/styles/footer.scss
@@ -1,9 +1,11 @@
+@use '../styles/colors.scss' as color;
+
 .socialNetworkLink:hover{
   scale: 1.1;
   transition: 0.8s;;
   p, svg{
-    color: #38AECC;
-    fill: #38AECC;
+    color: color.$violet-dark;
+    fill: color.$violet-dark;
     transition: 1.2s;
   }
   
