Did the individual page

--- a/Proyecto-final/src/Components/Navbar.astro
+++ b/Proyecto-final/src/Components/Navbar.astro
@@ -8,9 +8,9 @@ import Hamburger from './Hamburger.astro';
     <Hamburger/>
     <a href="/" class='Name'>JORDANO PERNIA</a>
     <div class='navLinks'>
-      <a href="/">Home</a>
-      <a href="/Library/">Library</a>
-      <a href="/About me/">About me</a>
+      <a href="/">Inicio</a>
+      <a href="/Library/">Biblioteca</a>
+      <!-- <a href="/About me/">About me</a> -->
     </div>
   </nav>
 </header>
