--- a/Proyecto-final/src/layouts/BaseLayout.astro
+++ b/Proyecto-final/src/layouts/BaseLayout.astro
@@ -22,7 +22,7 @@ const { pageTitle } = Astro.props;
   <body class="isabelline-bg">
     <Navbar />
     <slot />
-    <Footer/>
+    <!-- <Footer/> -->
     <script>
       import "../scripts/menu.ts";
     </script>
