--- a/Proyecto-final/src/Components/Navbar.astro
+++ b/Proyecto-final/src/Components/Navbar.astro
@@ -6,7 +6,7 @@ import Hamburger from './Hamburger.astro';
 <header>
   <nav class="d-flex align-items-center justify-content-center py-2 px-5 bone-bg">
     <Hamburger/>
-    <a href="/" class='Name'>JORDANO PERNIA</a>
+    <a href="/" class='Name'>Un viaje por la historia </a>
     <div class='navLinks'>
       <a href="/">Inicio</a>
       <a href="/Library/">Biblioteca</a>
