Added new thing

--- a/Proyecto-final/src/styles/main.scss
+++ b/Proyecto-final/src/styles/main.scss
@@ -42,6 +42,10 @@ a:visited {
   color: #8B6D55 !important;
 }
 
+.brown-umber{
+  color: color.$brown-umber;
+}
+
 .letterSpace{
   letter-spacing:  0.1rem;
 }
