--- a/Proyecto-final/src/Components/Navbar.astro
+++ b/Proyecto-final/src/Components/Navbar.astro
@@ -9,7 +9,10 @@ import Hamburger from './Hamburger.astro';
     <a href="/" class='Name'>Un viaje por la historia </a>
     <div class='navLinks'>
       <a href="/">Inicio</a>
-      <a href="/Library/">Biblioteca</a>
+      <a href="/Articulos/">Articulos</a>
+      <a href="/Biblioteca/">Biblioteca</a>
+      <a href="/Staff/">Staff</a>
+      <a href="/Contacto/">Contacto</a>
       <!-- <a href="/About me/">About me</a> -->
     </div>
   </nav>
