Finish the library part and started doing responsivenes

--- a/Proyecto-final/src/Components/Navbar.astro
+++ b/Proyecto-final/src/Components/Navbar.astro
@@ -6,10 +6,10 @@ import Hamburger from './Hamburger.astro';
 <header>
   <nav class="d-flex align-items-center justify-content-center py-2 px-5 bone-bg">
     <Hamburger/>
-    <a href="/" class='Name'>Un viaje por la historia </a>
+    <a href="/" class='Name'>Editorial Turpial </a>
     <div class='navLinks'>
       <a href="/">Inicio</a>
-      <a href="/Articulos/">Articulos</a>
+      <!-- <a href="/Articulos/">Articulos</a> -->
       <a href="/Biblioteca/">Biblioteca</a>
       <a href="/Staff/">Staff</a>
       <a href="/Contacto/">Contacto</a>
