--- a/Proyecto-final/src/pages/Contacto/index.astro
+++ b/Proyecto-final/src/pages/Contacto/index.astro
@@ -1,5 +1,6 @@
 ---
 import BaseLayout from "../../layouts/BaseLayout.astro"
+import React from "react"
 import "../../styles/staff.scss"
 
 const pageTitle = "Contactanos"
@@ -29,7 +30,7 @@ const pageTitle = "Contactanos"
                   <label for="message" class="form-label fs-4 brown-umber fs-medium">Message</label>
                   <textarea class="form-control borderInput" id="message" name="message" rows="3" required></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary fs-4">Submit</button>
+                <button type="submit" class="btnGoBack fs-5">Submit</button>
               </form>
               
          </div>
