--- a/Proyecto-final/src/pages/Staff/index.astro
+++ b/Proyecto-final/src/pages/Staff/index.astro
@@ -33,7 +33,7 @@ const pageTitle = "Staff"
                 <div class="staffText d-flex flex-column justify-content-center align-items-center fs-5 brown-umber gap-4">
                   <img class="staffImg" src="../../src/assets/staff/9a26827fda1d44dcd81d911d18d477ce.jpg"/>
                   <div class="fs-5 brown-umber fw-semibold text-center">Director de diseño - Tito Salas</div>
-                  <p class="fs-5" >N Fue un pintor venezolano reconocido por su magistral representación de Simón Bolívar y las batallas de la Independencia, convirtiéndose en un ícono del arte nacional. Su obra, cargada de simbolismo y patriotismo, lo consolidó como uno de los artistas más importantes de Venezuela.</p>
+                  <p class="fs-5" >Fue un pintor venezolano reconocido por su magistral representación de Simón Bolívar y las batallas de la Independencia, convirtiéndose en un ícono del arte nacional. Su obra, cargada de simbolismo y patriotismo, lo consolidó como uno de los artistas más importantes de Venezuela.</p>
                 </div>
               </div>
             </div>
