--- a/Proyecto-final/src/styles/main.scss
+++ b/Proyecto-final/src/styles/main.scss
@@ -42,6 +42,10 @@ a:visited {
   color: #8B6D55 !important;
 }
 
+.coyote-font{
+  color: #7E644E;
+}
+
 .brown-umber{
   color: color.$brown-umber;
 }
