--- a/Proyecto-final/src/styles/navbar.scss
+++ b/Proyecto-final/src/styles/navbar.scss
@@ -10,7 +10,7 @@
   width: 40px;
   height: 5px;
   margin-bottom: 10px;
-  background-color: #ff9776;
+  background-color: #C9B5A6;
 }
 
 .navLinks {
