--- a/Proyecto-final/src/styles/scrollNode.scss
+++ b/Proyecto-final/src/styles/scrollNode.scss
@@ -4,8 +4,13 @@
   width: 40%;
   height: auto;
   border-radius: 5px;
+
 }
 
+.roundImg{
+  border-radius: 10px;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+}
 
 .oddImage{
   transition-duration: 1s; 
@@ -17,7 +22,8 @@
 }
 
 .oddImage:hover{
-  transform: rotate(-2deg) scale(1.1)
+  transform: rotate(-2deg) scale(1.1);
+  
 }
 
 .evenImage{
@@ -36,9 +42,29 @@
 
 
 .scrollLine{
-  width: 13px;
+  width: 10px;
+  position: relative;
   background-color: color.$brown-khaki;
 
+}
+
+.circle {
+  position: absolute;
+  z-index: 2;
+  width: 50px;
+  height: 50px;
+   background-color: #F8F5F2;
+  // background-color: #BC8F8F;
+  border: 8px solid #8B4513;
+  border-radius: 50%;
+  transform: scale(0.40);
+  transition: opacity 1s, transform 0.7s;
+}
+
+.in-viewport {
+  opacity: 1;
+  transform: scale(1);
+  
 }
 
 .scrollLineFirstImg{
@@ -54,7 +80,7 @@
 .scrollSubLine{
   width: 100%;
   height: 100%;
-  background-color: color.$purple-grape;;
+  background-color: #8B4513;
   animation-name: subline;
   animation-duration: 2s;
 
@@ -69,3 +95,8 @@
   }
 }
 
+.btnGoBack:hover{
+  background-color: #C9B5A6;
+  scale: 1.05;
+  transition: 1s;
+}
