--- a/Proyecto-final/src/styles/staff.scss
+++ b/Proyecto-final/src/styles/staff.scss
@@ -1,3 +1,5 @@
+@use '../styles/colors.scss' as color;
+
 .w-30{
   width: 30%;
 }
@@ -27,4 +29,21 @@
 
 .btn:hover{
 background-color: #9521D4;
+}
+
+.btnGoBack{
+   
+  width: 120px;
+  height: 30px;
+ 
+  background-color: #EAE1D6;
+  border: none;
+  border-radius: 5px;
+  outline: 2px solid color.$brown-khaki;
+}
+
+.btnGoBack:hover{
+  background-color: #C9B5A6;
+  scale: 1.05;
+  transition: 1s;
 }
