--- a/Proyecto-final/src/Components/Navbar.astro
+++ b/Proyecto-final/src/Components/Navbar.astro
@@ -9,11 +9,10 @@ import Hamburger from './Hamburger.astro';
     <a href="/" class='Name'>Editorial Turpial </a>
     <div class='navLinks'>
       <a href="/">Inicio</a>
-      <!-- <a href="/Articulos/">Articulos</a> -->
+      <a href="/Articulos/">Articulos</a>
       <a href="/Biblioteca/">Biblioteca</a>
       <a href="/Staff/">Staff</a>
       <a href="/Contacto/">Contacto</a>
-      <!-- <a href="/About me/">About me</a> -->
     </div>
   </nav>
 </header>
