--- a/Proyecto-final/src/pages/Contacto/index.astro
+++ b/Proyecto-final/src/pages/Contacto/index.astro
@@ -19,15 +19,15 @@ const pageTitle = "Contactanos"
                   <input type="text" class="form-control borderInput" id="name" name="name" required>
                 </div>
                 <div class="mb-3">
-                  <label for="number" class="form-label fs-4 brown-umber fs-medium">Number</label>
+                  <label for="number" class="form-label fs-4 brown-umber fs-medium">Numero</label>
                   <input type="tel" class="form-control borderInput" id="number" name="number" required>
                 </div>
                 <div class="mb-3">
-                  <label for="email" class="form-label fs-4 brown-umber fs-medium">Email address</label>
+                  <label for="email" class="form-label fs-4 brown-umber fs-medium">Correo Electronico</label>
                   <input type="email" class="form-control borderInput" id="email" name="email" required>
                 </div>
                 <div class="mb-3">
-                  <label for="message" class="form-label fs-4 brown-umber fs-medium">Message</label>
+                  <label for="message" class="form-label fs-4 brown-umber fs-medium">Contacto</label>
                   <textarea class="form-control borderInput" id="message" name="message" rows="3" required></textarea>
                 </div>
                 <button type="submit" class="btnGoBack fs-5">Submit</button>
