--- a/Proyecto-final/src/pages/Staff/index.astro
+++ b/Proyecto-final/src/pages/Staff/index.astro
@@ -11,17 +11,17 @@ const pageTitle = "Staff"
       <div class="container d-flex justify-content-between p-5 gap-5">
          <div class='w-100 d-flex flex-column justify-content-center px-4 gap-5 lineHeight'>
             <h2 class="fs-3 fw-bold mb-4 raw-umber-font letterSpace">Conoce a nuestro equipo de expertos</h1>
-            <div class="d-flex w-100 flex-wrap justify-content-between">
+            <div class="d-flex w-100 staffContainer justify-content-between">
 
-              <div class="d-flex gap-5 w-30" >
-                <div class="staffText d-flex flex-column justify-content-center align-items-center fs-5 brown-umber gap-4">
+              <div class="d-flex gap-5 w-30 staffCard" >
+                <div class="staffText d-flex flex-column justify-content-center align-items-center fs-5 brown-umber w-100 gap-4">
                   <img class="staffImg" src="../../src/assets/staff/RamonJVelasquez.jpg"/>
-                  <div class="fs-5 brown-umber fw-semibold text-center">Director de la editorial - Ramon J. Velásquez</div>
-                  <p class="fs-5" >Nacido en San Juan de Colón, Táchira, el 28 de noviembre de 1916, fue un destacado historiador, periodista y político venezolano. Su brillante trayectoria académica lo posicionó como una figura intelectual de gran renombre, dejando un legado invaluable en el ámbito educativo y cultural del país.</p>
+                  <div class="fs-5 brown-umber w-100 fw-semibold text-center">Director de la editorial - Ramon J. Velásquez</div>
+                  <p class="fs-5 w-100" >Nacido en San Juan de Colón, Táchira, el 28 de noviembre de 1916, fue un destacado historiador, periodista y político venezolano. Su brillante trayectoria académica lo posicionó como una figura intelectual de gran renombre, dejando un legado invaluable en el ámbito educativo y cultural del país.</p>
                 </div>
               </div>
 
-              <div class="w-30 d-flex gap-5">
+              <div class="d-flex gap-5 w-30 staffCard">
                 <div class="staffText d-flex flex-column justify-content-center align-items-center fs-5 brown-umber gap-4">
                   <img class="staffImg" src="../../src/assets/staff/csm_Uslar__Arturo_7c15ab58d3.jpg"/>
                   <div class="fs-5 brown-umber fw-semibold text-center">Director de edicion - Arturo Uslar Pietri</div>
@@ -29,7 +29,7 @@ const pageTitle = "Staff"
                 </div>
               </div>
 
-             <div class="w-30 d-flex gap-5">
+             <div class="d-flex gap-5 w-30 staffCard">
                 <div class="staffText d-flex flex-column justify-content-center align-items-center fs-5 brown-umber gap-4">
                   <img class="staffImg" src="../../src/assets/staff/9a26827fda1d44dcd81d911d18d477ce.jpg"/>
                   <div class="fs-5 brown-umber fw-semibold text-center">Director de diseño - Tito Salas</div>
