--- a/Proyecto-final/src/styles/biblioteca.scss
+++ b/Proyecto-final/src/styles/biblioteca.scss
@@ -21,3 +21,32 @@
 .bookWidth:hover{
   transform: scale(1.05)
 }
+
+.bookContainer{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  min-width: 300px
+}
+
+@media screen and (max-width: 768px) {
+  .bookWidth{
+    width: 80%;
+  }
+  .bookList{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: nowrap !important;
+    gap: 60px !important;
+  }
+
+  .bookContainer{
+    margin-top: 0px !important;
+  }
+
+  .bookPage{
+    margin-top: 0px !important;
+    padding-top: 0px !important;
+  }
+}
