--- a/Proyecto-final/src/styles/navbar.scss
+++ b/Proyecto-final/src/styles/navbar.scss
@@ -1,7 +1,12 @@
 @use 'colors.scss' as color;
 
 .hamburger {
+  display: flex;
+  flex-direction: column;
   padding-right: 20px;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
   cursor: pointer;
 }
 
@@ -9,7 +14,7 @@
   display: block;
   width: 40px;
   height: 5px;
-  margin-bottom: 10px;
+  
   background-color: #C9B5A6;
 }
 
@@ -47,6 +52,7 @@
   padding: 10px 0;
   text-align: center;
   letter-spacing: 0.2rem;
+  color: color.$black-jet
 }
 
 .Name:hover{
