Fixed the navbar and the vertical scroll

--- a/Proyecto-final/src/Components/Navbar.astro
+++ b/Proyecto-final/src/Components/Navbar.astro
@@ -4,9 +4,12 @@ import Hamburger from './Hamburger.astro';
 ---
 
 <header>
-  <nav class="d-flex align-items-center justify-content-center py-2 px-5 bone-bg">
-    <Hamburger/>
-    <a href="/" class='Name'>Editorial Turpial </a>
+  <nav class="d-flex align-items-center justify-content-center position-relative navBarContainer py-2 px-5 bone-bg">
+    <div class="d-flex align-items-center">
+      <Hamburger/>
+        <a href="/" class='Name'>Editorial Turpial </a>
+    </div>
+    
     <div class='navLinks'>
       <a href="/">Inicio</a>
       <a href="/Articulos/">Articulos</a>
