--- a/Proyecto-final/src/pages/index.astro
+++ b/Proyecto-final/src/pages/index.astro
@@ -13,12 +13,12 @@ const props ={
 ---
 
 <BaseLayout pageTitle={pageTitle} >
-   <div class="d-flex flex-column align-items-center p-5 w-100">
+   <div class="d-flex flex-column superContainer align-items-center p-5 w-100">
       <div class="container d-flex mainTextContainer gap-5 w-100 flex-wrap p-5 mb-5">
          <div class=' d-flex flex-column mainText align-items-center py-5 gap-3 lineHeight'>
-            <h2 class="fs-1 fw-bold mb-4 raw-umber-font letterSpace">Bienvenido a Editorial Turpial</h1>
-            <p class="fs-4 m-0 ">Somos una editorial que se enfoca en contar la historia, atraves de articulos, libros y revistas que narran los eventos que marcaron nuestro pais.</p>
-            <p class="fs-4 m-0">Nuestro enfoque principal es ayudar a dar a conocer a todas aquellas hechos que fueron relevantes, como de ayudar a todos aquellos escritores e historiadores que tengan como vision dar a conocer nuestra historia.</p>
+            <h2 class="fs-1 fw-bold mb-4 mainTitle raw-umber-font letterSpace">Bienvenido a Editorial Turpial</h1>
+            <p class="fs-4 m-0 p-1 ">Somos una editorial que se enfoca en contar la historia, atraves de articulos, libros y revistas que narran los eventos que marcaron nuestro pais.</p>
+            <p class="fs-4 m-0 p-1">Nuestro enfoque principal es ayudar a dar a conocer a todas aquellas hechos que fueron relevantes, como de ayudar a todos aquellos escritores e historiadores que tengan como vision dar a conocer nuestra historia.</p>
          </div>
          <div class="w-50 p-1 mainMap">
                <svg
